testcases/error-cases/syntax-error-05/error.txt
error[E0005]: unexpected token
 --> input.canon:3:5
  |
2 |     name = "test"
3 |     = // missing left side of assignment
  |     ^ unexpected token '='
  |
  = note: found unexpected token '='
  = help: check the syntax around this location
